force-app/main/default/objects/sc_ext__Dismissal__c/sc_ext__Dismissal__c.object-meta.xml
<CustomObject>
    <description>Represents dismissed entities across Own products.</description>
    <label>Dismissal</label>
    <nameField>
        <label>Dismissal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dismissals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>