force-app/main/default/objects/sc_ext__Dismissal__c/fields/sc_ext__Active__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if this Dismissal will be respected by Own products.</description>
    <inlineHelpText>Is this Dismissal Active?</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>