force-app/main/default/objects/sc_ext__Dismissal__c/fields/sc_ext__Archived__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__Archived__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A way to set aside Dismissals that you don&apos;t want to report on and don&apos;t want to fully delete.</description>
    <label>Archived</label>
    <type>Checkbox</type>
</CustomField>