force-app/main/default/objects/sc_ext__Dismissal__c/fields/sc_ext__Component_Key__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__Component_Key__c</fullName>
    <description>A key for a Security insights component which we are dismissing from scoring</description>
    <label>Component Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>