force-app/main/default/objects/sc_ext__Dismissal__c/fields/sc_ext__Component_Label__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__Component_Label__c</fullName>
    <description>Label representing the Security Insights component that has been dismissed</description>
    <label>Component Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>