force-app/main/default/objects/sc_ext__Dismissal__c/fields/sc_ext__Component_Row_Key__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__Component_Row_Key__c</fullName>
    <description>A key for a row in a Security Insights component which we want to dismiss from scoring</description>
    <label>Component Row Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>