force-app/main/default/objects/sc_ext__Dismissal__c/fields/sc_ext__Component_Row_Label__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__Component_Row_Label__c</fullName>
    <description>Label representing a specific row of a Security Insights component which has been dismissed</description>
    <label>Component Row Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>