force-app/main/default/objects/sc_ext__Dismissal__c/fields/sc_ext__Reason__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__Reason__c</fullName>
    <description>The reason that will be documented as the impetuous for dismissing this entity</description>
    <inlineHelpText>Why do we want to dismiss this entity?</inlineHelpText>
    <label>Reason</label>
    <type>TextArea</type>
</CustomField>