force-app/main/default/objects/sc_ext__Dismissal__c/recordTypes/sc_ext__Security_Insights_Component.recordType-meta.xml
<RecordType>
    <fullName>sc_ext__Security_Insights_Component</fullName>
    <active>true</active>
    <description>A Security Insights dashboard component</description>
    <label>Security Insights Component</label>
</RecordType>