force-app/main/default/objects/sc_ext__Dismissal__c/recordTypes/sc_ext__Security_Insights_Component_Row.recordType-meta.xml
<RecordType>
    <fullName>sc_ext__Security_Insights_Component_Row</fullName>
    <active>true</active>
    <description>A specific row in a Security Insights dashboard component</description>
    <label>Security Insights Component Row</label>
</RecordType>